public/css/styles.css
html {
  height: 100vh;
  font-size: 12px;
  margin: 0;
}

body {
  color: #293b5d;
  /* height: 100vh; */
  font-family: "Montserrat", sans-serif;
  letter-spacing: 0.2px;
  background-color: #fcfbf9;
  margin-bottom: 0;
  overflow-x: auto;
  overflow-y: hidden;
  margin: 0;
}

section {
  padding: 0 1.5%;
}

nav {
  padding: 8px 1.5%;
  /* margin-bottom: 5px; */
  display: flex;
  height: 50px;
  justify-content: center;
  align-items: center;
  box-shadow: 0 8px 8px -10px rgb(0 0 0 / 15%);
}

#logo {
  flex: 5;
  font-size: 2.25rem;
  font-weight: 700;
}

#links {
  display: flex;
  flex: 1;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
}

#links > a {
  margin-left: 15px;
}

a {
  text-decoration: none;
  color: #293b5e;
  font-size: 1.2rem;
}

#btn {
  background-color: #2f75f2;
  border-radius: 20px;
  padding: 10px 18px;
  border: none;
  color: white;
  box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
}

#btn:hover {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2) 0 0);
}

#board {
  display: flex;
  position: absolute;
  margin-top: 12px;
  flex-direction: row;
  align-items: flex-start;
  overflow-x: auto;
  left: 0;
  right: 0;
  padding-left: 1%;
  padding-right: 1%;
  min-height: 100%;
}

input {
  width: 100%;
  padding: 8px 20px;
  margin: 6px 0;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.todo-list-container {
  display: flex;
  flex-direction: column;
  border-color: white;
  border-style: 1px solid;
  border-radius: 5px;
  padding: 1px 8px;
  margin: 0px 5px 40px;
  min-width: 272px;
  max-width: 272px;
  max-height: 77vh;
  box-shadow: 0 2px 16px 0 rgb(0 0 0 / 6%);
  background-color: #eaedf0;
}

.todo-list-container > .items {
  overflow-y: scroll;
  min-height: 30px;
}

.add-list {
  margin-top: 0;
  width: 272px;
  border-radius: 20px;
  height: 35px;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
}
.add-list:focus {
  outline: none;
}

.add-card {
  background-color: #eaedf0;
  border: none;
  margin-top: 0;
}

.add-card:hover {
  background-color: #f4f5f4;
}

.todos {
  overflow-y: auto;
  margin-bottom: 5%;
}

.todo-card {
  flex-direction: row;
  align-items: center;
  margin-bottom: 9px;
  padding: 0 1%;
  flex: 1;
  border-radius: 5px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
  cursor: pointer;
}

.flaticons {
  padding: 0;
  flex: 2;
  margin: 0;
  align-self: center;
}

.todo-card input {
  visibility: hidden;
}

img:hover {
  opacity: 0.5;
}

.flaticons > img {
  padding: 0;
  margin: 0;
  width: 10px; /* you can use % */
  height: auto;
  visibility: hidden;
}

.todo-card:hover img {
  visibility: visible;
}

.todo-card:hover input {
  visibility: visible;
}

.todo-card:hover {
  background-color: #f4f5f7;
}

.targeted {
  background-color: #f56488;
  border-style: solid;
  border-width: 2px;
  color: white;
  border-color: #f56488;
}

.targeted:hover {
  background-color: #f56488;
}

.cancel-btn {
  background-color: white;
  margin-left: 5px;
  border-radius: 20px;
  padding: 10px 18px;
  border-style: solid;
  border-width: 1px;
  border-color: #9e9e9e;
  color: #666767;
  /* box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2); */
}

.cancel-btn:hover {
  background-color: rgb(248, 248, 248);
  cursor: pointer;
}

.todo-content {
  display: flex;
  flex-direction: row;
}

.todo-description {
  flex: 14;
  margin-right: 2%;
  font-size: 12px;
}

input[type="checkbox"] {
  flex: 1.5;
  align-self: center;
  margin-right: 1px;
}

.completed-tag {
  color: red;
  font-size: 12px;
}

.list-header {
  display: flex;
  direction: row;
  padding: 0;
  position: relative;
}

.list-name {
  flex: 10;
}

.list-popup {
  text-align: center;
  vertical-align: top;
  line-height: 1;
  cursor: pointer;
  letter-spacing: 1px;
}
.modal {
  display: none;
}

.modal-styles {
  border-radius: 5px;
  border: 1px solid #dfe2e7;
  font-size: 12px;
  position: absolute;
  width: 272px;
  top: 30px;
  left: 259px;
  background-color: #ffffff;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
}

#modal-title {
  font-weight: 500;
  text-align: center;
  margin: 12px;
}

span {
  border-bottom: solid 1px #dfe2e7;
}

.delete-list {
  padding: 5px;
  cursor: pointer;
}

.delete-list:hover {
  background-color: #f7f7f7;
}

#target-list {
  margin-top: 40px;
  display: flex;
  align-items: flex-end;
  /* transition: all 0.5s; */
}

#target-list > input {
  height: 40px;
}

#target-list > button {
  height: 40px;
}

/*dashboard styling*/

#greeting {
  font-size: 1.5rem;
  margin: 40px 0;
}

#user-name {
  color: #2f75f2;
}

.dashboard-flaticons {
  position: absolute;
  top: 6.344px;
  left: 170px;
  visibility: hidden;
}

.dashboard-flaticons > img {
  width: 10px;
  visibility: hidden;
}

.board-card:hover img {
  visibility: visible;
  cursor: pointer;
}

/* .dashboard-flaticons:hover {
  visibility: visible;
} */

.create-board {
  margin-right: 5px;
  border-radius: 20px;
  width: 210px;
  height: 35px;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
}

.create-board:focus {
  outline: none;
}

#boards-section {
  padding-top: 30px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#boards {
  width: 60%;
  height: 58vh;
  display: flex;
  flex-flow: wrap;
  justify-content: center;
  align-items: center;
  align-content: flex-start;
  padding: 10px;
  overflow-y: scroll;
}

.board-card {
  position: relative;
  font-weight: 400;
  display: flex;
  margin: 2%;
  display: flex;
  height: 170px;
  width: 200px;
  justify-content: center;
  align-items: center;
  align-content: center;
  border-radius: 10px;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
  transition: all 0.5s;
  letter-spacing: 0.5px;
  background-color: #ffffff;
}

.board-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}
/* .vl {
  height: 100%;
  width: 5px;
  position: relative;
  background-color: green;
} */

.board-name {
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  height: 100%;
  width: 100%;
  font-size: 16px;
  text-align: center;
}

/* Login Page */

#login-section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 80vh;
  width: 100vw;
}

#login {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.google-signup-button {
  background-image: url(https://d3nn82uaxijpm6.cloudfront.net/assets/website/landing-page/icon-google-d0e460839c4717a1dc562f7233331668a2674805b8b2df3eac5ec7fd2d6add46.svg);
}

.signup-button {
  display: block;
  color: #242428;
  background-color: #fff;
  background-size: 24px;
  background-position: 16px center;
  background-repeat: no-repeat;
  font-size: 12px;
  border: 1px solid #dfdfe8;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 60px;
  padding-right: 50px;
  -webkit-transition: background-color 0.1s ease, border-color 0.1s ease;
  transition: background-color 0.1s ease, border-color 0.1s ease;
  will-change: background-color, border-color;
}

/* Study session page styling */

#study {
  display: flex;
  flex-direction: row;
  /* align-items: center; */
  justify-content: flex-start;
  margin-top: 100px;
}

#study-list {
  display: flex;
  flex: 3;
  justify-content: center;
  /* align-items: flex-end; */
  height: 100%;
}

#study-list > .todo-list-container {
  margin: 0;
  max-height: 500px;
}

#study-timer {
  flex: 5;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.timerInputs {
  display: flex;
  padding: 20px;
}

#minutes {
  flex-direction: row;
  padding: 2%;
  flex: 1;
  height: 75px;
  width: 70px;
  font-size: 2rem;
  text-align: center;
  margin-left: 10px;
  border-radius: 20px;
  outline: none;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
}

#hours {
  flex-direction: row;
  padding: 2%;
  flex: 1;
  height: 75px;
  width: 70px;
  margin-right: 10px;
  font-size: 2rem;
  text-align: center;
  border-radius: 20px;
  outline: none;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
}

.separator {
  display: inline;
  font-size: 2.5rem;
}

#pause-btn {
  background-color: #2f75f2;
  border-radius: 20px;
  padding: 10px 18px;
  border: none;
  color: white;
  box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
}

#pause-btn:hover {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2) 0 0);
  cursor: pointer;
}

#countdown-timer {
  font-family: "Roboto Mono", monospace;
  font-size: 5rem;
  font-weight: bold;
  padding: 20px;
}

#session-ended {
  font-size: 2.5rem;
}

/* Analytics page styling */

#charts-section {
  display: flex;
  justify-content: center;
  align-items: center;
  height: calc(100vh - 69px);
}

#charts-container {
  flex: 1;
  flex-direction: row;
  flex-wrap: wrap;
  height: 100%;
  max-width: 70%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow-y: auto;
  align-content: center;
}

.chart-container {
  margin: 10px;
  padding: 8px 20px;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
  border-radius: 5px;
  background-color: white;
}

canvas {
  margin: 10px;
  padding: 8px 20px;
  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 6%);
  border-radius: 5px;
  background-color: white;
}

.chart-title {
  margin-top: 0px;
}

.emoji {
  font-size: 20px;
}

/* Leaderboard Styling */
#leaderboard-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#leaderboard-title {
  margin-top: 20px;
  margin-bottom: 0px;
}

#leaderboard-rank {
  margin-bottom: 10px;
  font-weight: 600;
  font-size: 1.1rem;
}

#leaderboard-table {
  flex: 1;
  min-width: 450px;
  box-shadow: 0 2px 20px 0 rgb(0 0 0 / 6%);
  padding: 16px;
  background-color: white;
  /* overflow-y: scroll; */
  border-radius: 10px;
}

#leaderboard-rows {
  max-height: 68vh;
  overflow-y: scroll;
}

#leaderboard-table > header {
  font-weight: bold;
  font-size: 1.24rem;
  box-shadow: 0 8px 8px -10px rgb(0 0 0 / 15%);
}

header,
.row {
  display: flex; /* aligns all child elements (flex items) in a row */
  /* border-style: solid; */
  margin-bottom: 8px;
  font-size: 1.24rem;
}

.rank {
  flex: 1;
  display: flex;
  align-items: center;
}

.username {
  flex: 2;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.time {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.username > img {
  border-radius: 50%;
  width: 25px;
  margin-right: 8px;
}

#rank-emoji {
  font-size: 1.8rem;
}

.total-time {
  font-family: monospace;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  font-size: 1.35rem;
}

